moving stuff around using mouse

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,7 +3,8 @@
         <img src="/assets/logo.png" alt="">
     </header>
     <main>
-        <article class="grid" (dragover)="allowDrop($event)" (drop)="dropped($event)" #container>
+        <article class="grid"  #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)" (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp()">
+            <ng-template  #container></ng-template>
         </article>
         <nav>
             <app-plugin-library></app-plugin-library>
