--- a/src/app/components/plugin-a/plugin-a.component.scss
+++ b/src/app/components/plugin-a/plugin-a.component.scss
@@ -3,7 +3,7 @@ $height: 40px;
 
 .plugin {
     border: 1px solid gray;
-    border-radius: $height / 2;
+    // border-radius: $height / 2;
     width: $width;
     height: $height;
     padding: 10px;
