--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -13,6 +13,9 @@
     <nav>
         <app-plugin-library></app-plugin-library>
     </nav>
-    <aside>Aside</aside>
+    <aside>
+        <div><button (click)="save()">Save</button></div>
+        <div><button (click)="load()">Load</button></div>
+    </aside>
 </main>
 <button (click)="clear()"></button>
