--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -8,7 +8,7 @@ $primary-text-color: #b5b5b5;
 main {
     display: flex;
     min-height: calc(100vh - $header-height);
-    background-color: $black-color;
+    // background-color: $black-color;
     color: $primary-text-color;
 }
 
@@ -20,7 +20,7 @@ main > article {
 main > nav,
 main > aside {
     flex: 0 0 $left-menu-width;
-    background: $primary-bg-color;
+    // background: $primary-bg-color;
 }
 
 main > nav {
@@ -44,31 +44,8 @@ header {
     background-size: cover;
 }
 
-.example-box {
-    width: 200px;
-    height: 200px;
-    border: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    cursor: move;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: #fff;
-    border-radius: 4px;
-    position: relative;
-    z-index: 1;
-    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.example-box:active {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-        0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.grid {
-    background-image: repeating-linear-gradient(#2b2c2c 0 1px, transparent 1px 100%),
-        repeating-linear-gradient(90deg, #2b2c2c 0 1px, transparent 1px 100%);
-    background-size: 71px 71px;
-}
+// .grid {
+//     background-image: repeating-linear-gradient(#2b2c2c 0 1px, transparent 1px 100%),
+//         repeating-linear-gradient(90deg, #2b2c2c 0 1px, transparent 1px 100%);
+//     background-size: 71px 71px;
+// }
