--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,7 +5,7 @@
     <article class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)"
         (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
         <ng-container *ngFor="let plugin of plugins">
-            <div appDynamicPlugin [id]="plugin.id!" [x]="plugin.x" [y]="plugin.y"></div>
+            <div appDynamicPlugin [data]="{x :plugin.x, y: plugin.y, id: plugin.id! }"></div>
         </ng-container>
     </article>
     <nav>
