drawing buggy lines

--- a/src/app/components/dynamic-node/dynamic-node.component.html
+++ b/src/app/components/dynamic-node/dynamic-node.component.html
@@ -1,3 +1,4 @@
-<div #host [attr.value]="id">
+<div #host [attr.value]="id" class="plugin">
     <ng-container #outlet></ng-container>
+    <div class="outlet"></div>
 </div>
