--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -4,10 +4,10 @@
 <main>
     <article class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)"
         (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
-        <ng-container *ngFor="let plugin of plugins">
+        <ng-container *ngFor="let plugin of state?.plugins">
             <app-dynamic-node [data]="{x :plugin.x, y: plugin.y, id: plugin.id! }"></app-dynamic-node>
         </ng-container>
-        <ng-container *ngFor="let c of connections">
+        <ng-container *ngFor="let c of state?.connections">
             <app-connection [data]="{id: c.id, x1: c.x1, x2: c.x2, y1: c.y1, y2: c.y2  }"></app-connection>
         </ng-container>
     </article>
