draw from outlet to inlet

--- a/src/app/components/dynamic-node/dynamic-node.component.html
+++ b/src/app/components/dynamic-node/dynamic-node.component.html
@@ -1,4 +1,5 @@
 <div #host [attr.value]="id" class="plugin">
     <ng-container #outlet></ng-container>
+    <div class="inlet"></div>
     <div class="outlet"></div>
 </div>
