--- a/src/app/components/dynamic-node/dynamic-node.component.scss
+++ b/src/app/components/dynamic-node/dynamic-node.component.scss
@@ -1,5 +1,5 @@
 $width: 200px;
-$height: 40px;
+$height: 60px;
 $outlet-size: 20px;
 
 .plugin {
@@ -28,5 +28,20 @@ $outlet-size: 20px;
             cursor: crosshair;
         }
     }
-}
 
+    .inlet {
+        border: 2px solid gray;
+        width: $outlet-size;
+        height: $outlet-size;
+        position: absolute;
+        top: calc(50% - $outlet-size / 2);
+        left: calc(1px - $outlet-size / 2 );
+        border-radius: 50%;
+        background-color: #fff;
+
+        &:hover {
+            background-color: orange;
+            cursor: crosshair;
+        }
+    }
+}
