--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,7 +5,7 @@
     <article class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)"
         (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
         <ng-container *ngFor="let n of state?.nodes">
-            <app-dynamic-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type }"></app-dynamic-node>
+            <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type }"></app-node>
         </ng-container>
         <ng-container *ngFor="let c of state?.links">
             <app-link [data]="{ id: c.id, x1: c.x1, x2: c.x2, y1: c.y1, y2: c.y2 }"></app-link>
