--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -28,6 +28,7 @@ $outlet-size: 20px;
         left: calc(100% - $outlet-size / 2 + 1px);
         border-radius: 50%;
         background-color: #fff;
+        z-index: 2;
 
         &:hover {
             background-color: orange;
@@ -44,6 +45,7 @@ $outlet-size: 20px;
         left: calc(1px - $outlet-size / 2 );
         border-radius: 50%;
         background-color: #fff;
+        z-index: 2;
 
         &:hover {
             background-color: orange;
