--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,20 +1,27 @@
 $header-height: 75px;
-$left-menu-width: 400px;
+$left-menu-width: 300px;
 
 $primary-bg-color: #3e3e3e;
 $black-color: #0a0d0c;
 $primary-text-color: #b5b5b5;
 
+.layout {
+    height: 100vh;
+    width: 100vw;
+}
+
 main {
     display: flex;
-    min-height: calc(100vh - $header-height);
+    height: calc(100vh - $header-height);
     background-color: $black-color;
     color: $primary-text-color;
+    position: static;
 }
 
 main > article {
     flex: 1;
     position: relative;
+    overflow: hidden;
 }
 
 main > nav,
@@ -27,13 +34,6 @@ main > nav {
     order: -1;
 }
 
-header,
-article,
-nav,
-aside {
-    padding: 1em;
-}
-
 header {
     background: $primary-bg-color;
     height: $header-height;
@@ -42,22 +42,4 @@ header {
     background-image: url("/assets/logo.png");
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.grid {
-    background-image: repeating-linear-gradient(#2b2c2c 0 1px, transparent 1px 100%),
-        repeating-linear-gradient(90deg, #2b2c2c 0 1px, transparent 1px 100%);
-    background-size: 71px 71px;
-}
-
-
-svg {
-    z-index: 0;
-    position: absolute;
-    overflow: visible !important;
-}
-
-.main-path {
-    stroke: #4ea9ff;
-    stroke-width: 3px;
 }
