--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -10,7 +10,8 @@
             <app-plugin-library></app-plugin-library>
         </nav>
         <aside>
-            Settings:
+           <button (click)="load()">Load</button>
+           <button (click)="save()">Save</button>
         </aside>
     </main>
 </div>
