--- a/src/app/components/workbench/workbench.component.html
+++ b/src/app/components/workbench/workbench.component.html
@@ -1,5 +1,11 @@
-<div class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)"
+
+<div class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)" [style.transform]="'scale('+ scale +')'"
     (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
+    <div style="z-index: 15;">
+        <button (click)="zoomIn()">+</button>
+        <button (click)="zoomOut()">-</button>
+    </div>
+ 
     <ng-container *ngFor="let n of state?.nodes">
         <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type }"></app-node>
     </ng-container>
