--- a/src/app/components/workbench/workbench.component.html
+++ b/src/app/components/workbench/workbench.component.html
@@ -1,15 +1,16 @@
 
-<div class="grid" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)" [style.transform]="'scale('+ scale +')'"
+<div class="grid"></div>
+<div class="bench" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)" [style.transform]="'scale('+ scale +')'"
     (mousedown)="mouseDown($event)" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
-    <div style="z-index: 15;">
-        <button (click)="zoomIn()">+</button>
-        <button (click)="zoomOut()">-</button>
-    </div>
- 
     <ng-container *ngFor="let n of state?.nodes">
         <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type }"></app-node>
     </ng-container>
     <ng-container *ngFor="let c of state?.links">
         <app-link [data]="{ id: c.id, x1: c.x1, x2: c.x2, y1: c.y1, y2: c.y2 }"></app-link>
     </ng-container>
+</div>
+
+<div class="zoom">
+    <button (click)="zoomIn()">+</button>
+    <button (click)="zoomOut()">-</button>
 </div>
