--- a/src/app/components/workbench/workbench.component.scss
+++ b/src/app/components/workbench/workbench.component.scss
@@ -4,10 +4,24 @@ svg {
     overflow: visible !important;
 }
 
+.bench {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .grid {
     width: 100%;
     height: 100%;
     background-image: repeating-linear-gradient(#2b2c2c 0 1px, transparent 1px 100%),
         repeating-linear-gradient(90deg, #2b2c2c 0 1px, transparent 1px 100%);
     background-size: 50px 50px;
+}
+
+.zoom {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
