--- a/src/app/components/workbench/workbench.component.scss
+++ b/src/app/components/workbench/workbench.component.scss
@@ -5,8 +5,15 @@ svg {
 }
 
 .bench {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+}
+
+.drawboard {
+   
     position: absolute;
     top: 0;
     left: 0;
