--- a/src/app/components/workbench/workbench.component.html
+++ b/src/app/components/workbench/workbench.component.html
@@ -3,10 +3,10 @@
     (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
     <div class="drawboard" [style.transform]="'scale('+ scale +') translate('+ ddx / scale +'px, '+ ddy  / scale + 'px)'">
         <ng-container *ngFor="let n of state?.nodes">
-            <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type }"></app-node>
+            <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type, selected: n.selected }"></app-node>
         </ng-container>
-        <ng-container *ngFor="let c of state?.links">
-            <app-link [data]="{ id: c.id, x1: c.x1, x2: c.x2, y1: c.y1, y2: c.y2 }"></app-link>
+        <ng-container *ngFor="let l of state?.links">
+            <app-link [data]="{ id: l.id, x1: l.x1, x2: l.x2, y1: l.y1, y2: l.y2 }"></app-link>
         </ng-container>
     </div>
 </div>
