--- a/src/app/components/workbench/workbench.component.scss
+++ b/src/app/components/workbench/workbench.component.scss
@@ -32,3 +32,9 @@ svg {
     right: 0;
     top: 0;
 }
+
+.select-zone {
+    position: absolute;
+    border: 1px dashed white;
+    display: none;
+}
