--- a/src/app/components/workbench/workbench.component.html
+++ b/src/app/components/workbench/workbench.component.html
@@ -8,7 +8,7 @@
         <ng-container *ngFor="let l of state?.links">
             <app-link [data]="{ id: l.id, x1: l.x1, x2: l.x2, y1: l.y1, y2: l.y2 }"></app-link>
         </ng-container>
-        <div #selectzone class="select-zone"></div>
+        <div #selectarea class="select-zone"></div>
     </div>
 </div>
 
