--- a/src/app/components/link/link.component.scss
+++ b/src/app/components/link/link.component.scss
@@ -2,4 +2,8 @@ svg {
     z-index: 0;
     position: absolute;
     overflow: visible !important;
+
+    .link-path {
+        stroke: limegreen;
+    }
 }
