--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -3,12 +3,13 @@ $height: 60px;
 $outlet-size: 20px;
 
 .plugin {
-    border: 2px solid gray;
+    border: 2px solid #D8E2FA;
     min-width: $width;
     min-height: $height;
     padding: 10px;
     cursor: grab;
     position: absolute;
+    background-color: #3E3E3E;
 
     user-select: none;
     -moz-user-select: none;
@@ -26,7 +27,7 @@ $outlet-size: 20px;
     }
 
     .outlet {
-        border: 2px solid gray;
+        border: 2px solid #D8E2FA;
         width: $outlet-size;
         height: $outlet-size;
         position: absolute;
@@ -43,7 +44,7 @@ $outlet-size: 20px;
     }
 
     .inlet {
-        border: 2px solid gray;
+        border: 2px solid #D8E2FA;
         width: $outlet-size;
         height: $outlet-size;
         position: absolute;
