--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -18,7 +18,7 @@ $outlet-size: 20px;
     -o-user-select: none;
 
     &.selected {
-        border: 2px solid #00bcd4;
+        border: 2px solid #02DCC7;
         box-shadow: rgb(255 255 255) 0px 0px 15px;
     }
 
