--- a/src/app/components/workbench/workbench.component.scss
+++ b/src/app/components/workbench/workbench.component.scss
@@ -35,6 +35,7 @@ svg {
 
 .select-zone {
     position: absolute;
-    border: 1px dashed white;
+    border: 1px solid #02DCC7;
+    background-color: #02dcc62c;
     display: none;
 }
