--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -10,6 +10,7 @@ $outlet-size: 20px;
     cursor: grab;
     position: absolute;
     background-color: #3E3E3E;
+    z-index: 1;
 
     user-select: none;
     -moz-user-select: none;
