--- a/src/app/components/plugin-b/plugin-b.component.html
+++ b/src/app/components/plugin-b/plugin-b.component.html
@@ -1,5 +1,5 @@
 <div>Plugin B</div>
-<div>Plugin C</div>
-<div>Plugin C</div>
-<div>Plugin C</div>
-<div>Plugin C</div>
+<div>Plugin B</div>
+<div>Plugin B</div>
+<div>Plugin B</div>
+<div>Plugin B</div>
