--- a/src/app/components/link/link.component.html
+++ b/src/app/components/link/link.component.html
@@ -1,1 +1,10 @@
-<div class="link" #host></div>
+<div class="link" #host>
+    <svg>
+        <path d="
+      M 0,0
+      h 100
+      v 100
+      h 100
+      " fill="none" stroke="#558822" stroke-width="2"></path>
+    </svg>
+</div>
