--- a/src/app/components/workbench/workbench.component.html
+++ b/src/app/components/workbench/workbench.component.html
@@ -1,9 +1,12 @@
 <div class="grid" #grid></div>
 <div class="bench" #containerEl (dragover)="allowDrop($event)" (drop)="dropped($event)" (mousedown)="mouseDown($event)"
     (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
-    <div class="drawboard" [style.transform]="'scale('+ scale +') translate('+ ddx / scale +'px, '+ ddy  / scale + 'px)'">
+    <div class="drawboard"
+        [style.transform]="'scale('+ scale +') translate('+ ddx / scale +'px, '+ ddy  / scale + 'px)'">
         <ng-container *ngFor="let n of state?.nodes">
-            <app-node [data]="{x :n.x, y: n.y, id: n.id!, type: n.type, selected: n.selected, name: n.name, expanded: n.expanded }"></app-node>
+            <app-node
+                [data]="{x :n.x, y: n.y, id: n.id!, type: n.type, selected: n.selected, name: n.name, expanded: n.expanded }">
+            </app-node>
         </ng-container>
         <ng-container *ngFor="let l of state?.links">
             <app-link [data]="{ id: l.id, x1: l.x1, x2: l.x2, y1: l.y1, y2: l.y2 }"></app-link>
