--- a/src/app/components/link/link.component.html
+++ b/src/app/components/link/link.component.html
@@ -5,6 +5,6 @@
       h 100
       v 100
       h 100
-      " fill="none" stroke="#558822" stroke-width="2"></path>
+      "></path>
     </svg>
 </div>
