move multi nodes

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -15,7 +15,7 @@
             <app-plugin-library></app-plugin-library>
         </nav>
         <aside>
-
+            <pre><code>{{ state | json }}</code></pre>
         </aside>
     </main>
 </div>
