--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,4 +1,4 @@
-<div #host class="plugin" [attr.value]="id" [style.top]="y+'px'" [style.left]="x+'px'" [attr.data-id]="id"
+<div class="plugin" [attr.value]="id" [style.top]="y+'px'" [style.left]="x+'px'" [attr.data-id]="id" [style.width]="width+'px'"
     [ngClass]="{selected: selected}">
     <div class="inlet" [hidden]="!hasInlet"></div>
     <div class="outlet" [hidden]="!hasOutlet"></div>
