--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,6 +5,9 @@
             <button (click)="save()">Save</button>
             <button (click)="load()">Load</button>
             <button (click)="reset()">Reset</button>
+            <button (click)="undo()">Undo</button>
+            <button (click)="redo()">Redo</button>
+
         </div>
     </header>
     <main>
