added list of nodes to the right panel

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -15,7 +15,7 @@
             <app-plugin-library></app-plugin-library>
         </nav>
         <aside>
-
+            <app-right-panel [nodes]="store.state.nodes"></app-right-panel>
         </aside>
     </main>
 </div>
