--- a/src/app/components/plugin-library/plugin-library.component.scss
+++ b/src/app/components/plugin-library/plugin-library.component.scss
@@ -1,4 +1,13 @@
-.plugin {
-    padding: 0.5rem;
-    cursor: grab;
+.tree {
+    margin-left: 5px;
+
+    .plugin {
+        cursor: grab;
+        padding-top: 10px;
+        color: #c2c2c2;
+    }
+
+    .children {
+        padding-left: 1rem;
+    }
 }
