--- a/src/app/components/right-panel/right-panel.component.html
+++ b/src/app/components/right-panel/right-panel.component.html
@@ -1,9 +1,9 @@
 <div class="panel-header">
     <h3>Selection Details</h3>
 </div>
-<div *ngFor="let node of nodes">
-    <button class="accordion" [ngClass]="visibleNodesMap.get(node.id)? 'active': 'accordion'" (click)="togglePanel(node)">{{node.name}}</button>
-    <div [hidden]="!visibleNodesMap.get(node.id)">
+<div *ngFor="let node of state!.nodes">
+    <button class="accordion" [ngClass]="visibleNodesMap.get(node.id!)? 'active': 'accordion'" (click)="togglePanel(node)">{{node.name}}</button>
+    <div [hidden]="!visibleNodesMap.get(node.id!)">
         <p>plugin params</p>
     </div>
 </div> 
